@@ -1,3 +1,10 @@
+2017-03-08  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	stk_plot_histnormres.m: Ignore infinite normalized residuals
+
+	* misc/plot/stk_plot_histnormres.m: Ignore infinite normalized
+	residuals, with a warning.
+
 2017-02-21  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	stk_phipcrit.m: Fix a typo in the help text
